# fastapi_social

./: .gitignore  Dockerfile  Makefile  Makefile.bak  README.md  create_post_table.pgsql  database.py  docker-compose-jitu.yml  docker-compose-prod.yml  docker-compose.yml  docker.env  env.py  fastapi_social.code-workspace  generate_posts.py  generate_users.py  gmain_1.py  insert_posts.sql  insert_users.sql  main.py  models.py  my_post.json  old_main.py  pgmain.py  pyproject.toml  requirements.txt  run_app.mk  schemas.py  seed_users_posts.sql  select.pgsql  sql_app.db  sqlmodel_main.py
.github/workflows/: build-deploy.yml  tt.txt
alembic/: env.py
alembic/versions/: 1042aaa21c01_phone_number_added_into_users_table.py  1fdc655f0dcf_adding_updated_at_column.py  3f56e96f46ab_updated_models_using_sqlalchemy_v2.py  5b77a6f424e9_removed_created_at_column_from_votes_.py  5c548bbc67f5_adding_username_column_to_users_table.py  99bd8ee143f9_added_first_name_and_last_name_for_users.py  a3afd2c118ff_initial_migration.py  b450d9a26688_remove_address_and_phone_number_columns.py  b62b7630a882_create_tables.py  bc6574379078_updated_created_at_and_updated_column_.py  c5193b2f9ca2_create_tables.py  (+2 more)
app/: Dockerfile  app.py  database.py  main.py  models.py  oauth2.py  schemas.py
database/: database.py
models/: models.py
routers/: auth.py  post.py  user.py  vote.py
schemas/: schemas.py
streamlit_app/: app.py
templates/: home copy.html  layout.html
tests/: conftest.py  database.py  test_posts.py  test_users.py  test_votes.py
utils/: config.py  oauth2.py
(+31 files in other folders)
