[project]
name = "social"
version = "0.1.0"
description = "Social Media Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "argon2-cffi>=25.1.0",
    "bcrypt==4.3.0",
    "emailvalidator>=0.3",
    "fastapi[standard]>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.42",
    "sqlmodel>=0.0.24",
]
