[project]
name = "social"
version = "0.1.0"
description = "Social Media Application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "emailvalidator>=0.3",
    "fastapi[standard]>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
]
