[project]
name = "fastapi-social"
version = "0.1.0"
description = "Social Media"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.1",
    "emailvalidator>=0.3",
    "fastapi[standard]>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "python-jose[cryptography]>=3.5.0",
    "ruff>=0.14.14",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.31",
    "st-pydantic>=0.3.1",
    "streamlit>=1.53.1",
]
